vendor/pin-project-1.0.7/tests/ui/pin_project/packed-name-value.stderr
error: #[repr(packed)] attribute should not be name-value pair
  --> $DIR/packed-name-value.rs:16:8
   |
16 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   |        ^^^^^^^^^^^

error: #[repr(packed)] attribute should not be name-value pair
  --> $DIR/packed-name-value.rs:21:8
   |
21 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   |        ^^^^^^^^^^^
